--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
-    "mongoose": "^5.6.5"
+    "mongoose": "^5.6.5",
+    "request": "^2.88.0"
   }
 }
